--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^0.0.48",
+    "@ai-sdk/openai": "^0.0.54",
+    "@deepgram/sdk": "^3.6.0",
+    "ai": "^3.3.20",
+    "date-fns": "^3.6.0",
+    "framer-motion": "^11.3.31",
+    "lucide-react": "^0.436.0",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
+    "replicate": "^0.32.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "next": "15.2.2"
