--- a/package.json
+++ b/package.json
@@ -12,23 +12,26 @@
     "@ai-sdk/anthropic": "^0.0.48",
     "@ai-sdk/openai": "^0.0.54",
     "@deepgram/sdk": "^3.6.0",
+    "@tavily/core": "^0.3.1",
     "ai": "^3.3.20",
+    "axios": "^1.8.3",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.31",
     "lucide-react": "^0.436.0",
-    "react-markdown": "^9.0.1",
-    "remark-gfm": "^4.0.0",
-    "replicate": "^0.32.0",
+    "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.2"
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
+    "replicate": "^0.32.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
+    "@types/axios": "^0.9.36",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
